graph system update

--- a/manual/0 overview.ipynb
+++ b/manual/0 overview.ipynb
@@ -13,6 +13,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## DO NOT\n",
+    "\n",
+    "* DO NOT delete `monoblock_out.e` as it is used for testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Function naming\n",
     "\n",
     "* `get_` means getter\n",
