--- a/manual/2 SOO experiment design.ipynb
+++ b/manual/2 SOO experiment design.ipynb
@@ -95,20 +95,23 @@
     "\n",
     "\n",
     "# Display the results\n",
-    "graph_manager.draw(graph_manager.build_optimisation(\n",
+    "graph_manager.build_optimisation(\n",
     "    res.history\n",
-    "))\n",
-    "graph_manager.draw(graph_manager.build_2D_compare(\n",
+    ")\n",
+    "graph_manager.draw()\n",
+    "graph_manager.build_2D_compare(\n",
     "    grid,\n",
     "    proposed_layout,\n",
     "    true_temps,\n",
     "    model_temps\n",
-    "))\n",
-    "graph_manager.draw(graph_manager.build_3D_compare(\n",
+    ")\n",
+    "graph_manager.draw()\n",
+    "graph_manager.build_3D_compare(\n",
     "    grid,\n",
     "    true_temps,\n",
     "    model_temps\n",
-    "))"
+    ")\n",
+    "graph_manager.draw()"
    ]
   },
   {
@@ -170,20 +173,23 @@
     "\n",
     "\n",
     "# Display the results\n",
-    "graph_manager.draw(graph_manager.build_optimisation(\n",
+    "graph_manager.build_optimisation(\n",
     "    res.history\n",
-    "))\n",
-    "graph_manager.draw(graph_manager.build_2D_compare(\n",
+    ")\n",
+    "graph_manager.draw()\n",
+    "graph_manager.build_2D_compare(\n",
     "    grid,\n",
     "    proposed_layout,\n",
     "    true_temps,\n",
     "    model_temps\n",
-    "))\n",
-    "graph_manager.draw(graph_manager.build_3D_compare(\n",
+    ")\n",
+    "graph_manager.draw()\n",
+    "graph_manager.build_3D_compare(\n",
     "    grid,\n",
     "    true_temps,\n",
     "    model_temps\n",
-    "))"
+    ")\n",
+    "graph_manager.draw()"
    ]
   },
   {
@@ -242,16 +248,18 @@
     "\n",
     "\n",
     "# Display the results\n",
-    "graph_manager.draw(graph_manager.build_optimisation(\n",
+    "graph_manager.build_optimisation(\n",
     "    res.history\n",
-    "))\n",
-    "graph_manager.draw(graph_manager.build_1D_compare(\n",
+    ")\n",
+    "graph_manager.draw()\n",
+    "graph_manager.build_1D_compare(\n",
     "    grid,\n",
     "    proposed_layout,\n",
     "    sensor_values,\n",
     "    true_temps,\n",
     "    model_temps,\n",
-    "))"
+    ")\n",
+    "graph_manager.draw()"
    ]
   },
   {
@@ -312,16 +320,18 @@
     "\n",
     "\n",
     "# Display the results\n",
-    "graph_manager.draw(graph_manager.build_optimisation(\n",
+    "graph_manager.build_optimisation(\n",
     "    res.history\n",
-    "))\n",
-    "graph_manager.draw(graph_manager.build_1D_compare(\n",
+    ")\n",
+    "graph_manager.draw()\n",
+    "graph_manager.build_1D_compare(\n",
     "    grid,\n",
     "    proposed_layout,\n",
     "    sensor_values,\n",
     "    true_temps,\n",
     "    model_temps,\n",
-    "))"
+    ")\n",
+    "graph_manager.draw()"
    ]
   },
   {
@@ -378,16 +388,18 @@
     "\n",
     "\n",
     "# Display the results\n",
-    "graph_manager.draw(graph_manager.build_optimisation(\n",
+    "graph_manager.build_optimisation(\n",
     "    res.history\n",
-    "))\n",
-    "graph_manager.draw(graph_manager.build_1D_compare(\n",
+    ")\n",
+    "graph_manager.draw()\n",
+    "graph_manager.build_1D_compare(\n",
     "    grid,\n",
     "    proposed_layout,\n",
     "    sensor_values,\n",
     "    true_temps,\n",
     "    model_temps,\n",
-    "))"
+    ")\n",
+    "graph_manager.draw()"
    ]
   }
  ],
