--- a/manual/3 MOO experiment design.ipynb
+++ b/manual/3 MOO experiment design.ipynb
@@ -85,20 +85,22 @@
     "for i, setup in enumerate(res.X):\n",
     "    pickle_manager.save_file('results', 'Layout'+str(i)+'.obj', setup.reshape(-1, true_temp_field.get_dim()))\n",
     "\n",
-    "graph_manager.draw(graph_manager.build_pareto(\n",
+    "graph_manager.build_pareto(\n",
     "    res.F\n",
-    "))\n",
+    ")\n",
+    "graph_manager.draw()\n",
     "\n",
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
     "    experiment.set_all_sensors_active()\n",
     "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_plotting_arrays(res.X[i])\n",
-    "    graph_manager.draw(graph_manager.build_2D_compare(\n",
+    "    graph_manager.build_2D_compare(\n",
     "        grid,\n",
     "        proposed_layout,\n",
     "        true_temps,\n",
     "        model_temps\n",
-    "    ))\n",
+    "    )\n",
+    "    graph_manager.draw()\n",
     "    display_str = input('Enter setup to display [Q to quit]: ')\n"
    ]
   },
@@ -161,21 +163,23 @@
     "for i, setup in enumerate(res.X):\n",
     "    pickle_manager.save_file('results', 'Layout'+str(i)+'.obj', setup.reshape(-1, true_temp_field.get_dim()))\n",
     "\n",
-    "graph_manager.draw(graph_manager.build_pareto(\n",
+    "graph_manager.build_pareto(\n",
     "    res.F\n",
-    "))\n",
+    ")\n",
+    "graph_manager.draw()\n",
     "\n",
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
     "    experiment.set_all_sensors_active()\n",
     "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_plotting_arrays(res.X[i])\n",
-    "    graph_manager.draw(graph_manager.build_1D_compare(\n",
+    "    graph_manager.build_1D_compare(\n",
     "        grid,\n",
     "        proposed_layout,\n",
     "        sensor_values,\n",
     "        true_temps,\n",
     "        model_temps\n",
-    "    ))\n",
+    "    )\n",
+    "    graph_manager.draw()\n",
     "    display_str = input('Enter setup to display [Q to quit]: ')"
    ]
   }
