--- a/manual/2 SOO experiment design.ipynb
+++ b/manual/2 SOO experiment design.ipynb
@@ -91,7 +91,7 @@
     "    sensor_bounds\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_plotting_arrays(res.X)\n",
+    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X)\n",
     "\n",
     "\n",
     "# Display the results\n",
@@ -169,7 +169,7 @@
     "    sensor_bounds\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_plotting_arrays(res.X)\n",
+    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X)\n",
     "\n",
     "\n",
     "# Display the results\n",
@@ -244,7 +244,7 @@
     "    sensor_bounds\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_plotting_arrays(res.X)\n",
+    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X)\n",
     "\n",
     "\n",
     "# Display the results\n",
@@ -316,7 +316,7 @@
     "    sensor_bounds\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_plotting_arrays(res.X)\n",
+    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X)\n",
     "\n",
     "\n",
     "# Display the results\n",
@@ -384,7 +384,7 @@
     "    sensor_bounds\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_plotting_arrays(res.X)\n",
+    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X)\n",
     "\n",
     "\n",
     "# Display the results\n",
