--- a/manual/3 MOO experiment design.ipynb
+++ b/manual/3 MOO experiment design.ipynb
@@ -93,7 +93,7 @@
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
     "    experiment.set_all_sensors_active()\n",
-    "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_plotting_arrays(res.X[i])\n",
+    "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X[i])\n",
     "    graph_manager.build_2D_compare(\n",
     "        grid,\n",
     "        proposed_layout,\n",
@@ -171,7 +171,7 @@
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
     "    experiment.set_all_sensors_active()\n",
-    "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_plotting_arrays(res.X[i])\n",
+    "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X[i])\n",
     "    graph_manager.build_1D_compare(\n",
     "        grid,\n",
     "        proposed_layout,\n",
