--- a/manual/1 simulation processing.ipynb
+++ b/manual/1 simulation processing.ipynb
@@ -50,9 +50,10 @@
    "source": [
     "from sim_reader import MeshReader, Unfolder\n",
     "from fields import ScalarField, VectorField\n",
+    "from object_reader import PickleManager\n",
     "from regressors import LModel, CSModel\n",
-    "from file_reader import PickleManager\n",
     "import numpy as np\n",
+    "\n",
     "\n",
     "# Define the necessary objects\n",
     "reader = MeshReader('monoblock_out.e')\n",
@@ -66,13 +67,13 @@
     "bounds = unfolder.find_bounds(pos_2D)\n",
     "grid = unfolder.generate_grid(bounds, 30, 30)\n",
     "\n",
-    "temps = reader.read_scalar(sensor_region, 'temperature')\n",
-    "temp_field = ScalarField(LModel, bounds, 2)\n",
+    "temps = reader.read_scalar(sensor_region, 'temperature').reshape(-1, 1)\n",
+    "temp_field = ScalarField(LModel, bounds)\n",
     "temp_field.fit_model(pos_2D, temps)\n",
     "\n",
     "# Save the simulation data\n",
-    "pickle_manager.save_file('simulation', 'field_temp.obj', temp_field)\n",
-    "pickle_manager.save_file('simulation', 'grid_temp.obj', grid)"
+    "pickle_manager.save_file('simulation', 'temp_plane_field.obj', temp_field)\n",
+    "pickle_manager.save_file('simulation', 'temp_plane_points.obj', grid)"
    ]
   },
   {
@@ -92,9 +93,10 @@
    "source": [
     "from sim_reader import MeshReader, Unfolder\n",
     "from fields import ScalarField, VectorField\n",
+    "from object_reader import PickleManager\n",
     "from regressors import LModel, CSModel\n",
-    "from file_reader import PickleManager\n",
     "import numpy as np\n",
+    "\n",
     "\n",
     "# Define the necessary objects\n",
     "reader = MeshReader('monoblock_out.e')\n",
@@ -114,12 +116,12 @@
     "    reader.read_scalar(sensor_region, 'disp_z')\n",
     "]).T\n",
     "\n",
-    "disp_field = VectorField(LModel, bounds, 2)\n",
+    "disp_field = VectorField(LModel, bounds)\n",
     "disp_field.fit_model(pos_2D, disp)\n",
     "\n",
     "# Save the simulation data\n",
-    "pickle_manager.save_file('simulation', 'field_disp.obj', disp_field)\n",
-    "pickle_manager.save_file('simulation', 'grid_disp.obj', grid)"
+    "pickle_manager.save_file('simulation', 'disp_plane_field.obj', disp_field)\n",
+    "pickle_manager.save_file('simulation', 'disp_plane_points.obj', grid)"
    ]
   },
   {
@@ -139,9 +141,10 @@
    "source": [
     "from sim_reader import MeshReader, Unfolder\n",
     "from fields import ScalarField, VectorField\n",
+    "from object_reader import PickleManager\n",
     "from regressors import LModel, CSModel\n",
-    "from file_reader import PickleManager\n",
     "import numpy as np\n",
+    "\n",
     "\n",
     "# Define the necessary objects\n",
     "reader = MeshReader('monoblock_out.e')\n",
@@ -153,10 +156,10 @@
     "pos_3D = reader.read_pos(sensor_region)\n",
     "pos_2D = unfolder.compress_2D(pos_3D)\n",
     "bounds = unfolder.find_bounds(pos_2D)\n",
-    "temps = reader.read_scalar(sensor_region, 'temperature')\n",
+    "temps = reader.read_scalar(sensor_region, 'temperature').reshape(-1, 1)\n",
     "\n",
     "# Define the 2D field objects\n",
-    "temp_field = ScalarField(LModel, bounds, 2)\n",
+    "temp_field = ScalarField(LModel, bounds)\n",
     "temp_field.fit_model(pos_2D, temps)\n",
     "\n",
     "# Convert the 2D field to a 1D line\n",
@@ -166,13 +169,13 @@
     "line_temps = temp_field.predict_values(line_2D)\n",
     "line_1D = unfolder.compress_1D(line_2D)\n",
     "\n",
-    "bounds_1D = [line_1D[0], line_1D[-1]]\n",
-    "new_line_field = ScalarField(CSModel, bounds_1D, 1)\n",
+    "bounds_1D = np.array([line_1D[0], line_1D[-1]])\n",
+    "new_line_field = ScalarField(CSModel, bounds_1D)\n",
     "new_line_field.fit_model(line_1D, line_temps)\n",
     "\n",
     "# Save the new 1D line field\n",
-    "pickle_manager.save_file('simulation', 'field_temp_line.obj', new_line_field)\n",
-    "pickle_manager.save_file('simulation', 'line_temp.obj', line_1D)"
+    "pickle_manager.save_file('simulation', 'temp_line_field.obj', new_line_field)\n",
+    "pickle_manager.save_file('simulation', 'temp_line_points.obj', line_1D)"
    ]
   },
   {
@@ -192,9 +195,10 @@
    "source": [
     "from sim_reader import MeshReader, Unfolder\n",
     "from fields import ScalarField, VectorField\n",
+    "from object_reader import PickleManager\n",
     "from regressors import LModel, CSModel\n",
-    "from file_reader import PickleManager\n",
     "import numpy as np\n",
+    "\n",
     "\n",
     "# Define the necessary objects\n",
     "reader = MeshReader('monoblock_out.e')\n",
@@ -213,7 +217,7 @@
     "    reader.read_scalar(sensor_region, 'disp_z')\n",
     "]).T\n",
     "\n",
-    "disp_field = VectorField(LModel, bounds, 2)\n",
+    "disp_field = VectorField(LModel, bounds)\n",
     "disp_field.fit_model(pos_2D, disp)\n",
     "\n",
     "# Convert the 2D field to a 1D line\n",
@@ -223,13 +227,13 @@
     "line_disps = disp_field.predict_values(line_2D)\n",
     "line_1D = unfolder.compress_1D(line_2D)\n",
     "\n",
-    "bounds_1D = [line_1D[0], line_1D[-1]]\n",
-    "new_line_field = VectorField(CSModel, bounds_1D, 1)\n",
+    "bounds_1D = np.array([line_1D[0], line_1D[-1]])\n",
+    "new_line_field = VectorField(CSModel, bounds_1D)\n",
     "new_line_field.fit_model(line_1D, line_disps)\n",
     "\n",
     "# Save the new 1D line field\n",
-    "pickle_manager.save_file('simulation', 'field_disp_line.obj', new_line_field)\n",
-    "pickle_manager.save_file('simulation', 'line_disp.obj', line_1D)"
+    "pickle_manager.save_file('simulation', 'disp_line_field.obj', new_line_field)\n",
+    "pickle_manager.save_file('simulation', 'disp_line_points.obj', line_1D)"
    ]
   }
  ],
