SOO manuals updated

--- a/manual/2.2 SOO 1D scalars.ipynb
+++ b/manual/2.2 SOO 1D scalars.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2.1 SOO for 2D scalar field"
+    "# 2.2 SOO for 1D scalars"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Description"
+    "description"
    ]
   },
   {
@@ -43,11 +43,11 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = GraphManager()\n",
-    "true_temp_field = pickle_manager.read_file('simulation', 'temp_plane_field.obj')\n",
-    "grid = pickle_manager.read_file('simulation', 'temp_plane_points.obj')\n",
+    "true_temp_field = pickle_manager.read_file('simulation', 'temp_line_field.obj')\n",
+    "grid = pickle_manager.read_file('simulation', 'temp_line_points.obj')\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
-    "sensor_bounds = field_bounds+np.array([[1, 1], [-1, -1]])*0.002"
+    "sensor_bounds = field_bounds+np.array([[1], [-1]])*0.002"
    ]
   },
   {
@@ -65,16 +65,16 @@
    "source": [
     "# Setup the symmetry\n",
     "symmetry_manager = SymmetryManager()\n",
-    "symmetry_manager.set_2D_x(np.mean(field_bounds[:, 0]))\n",
+    "symmetry_manager.set_1D_x(0.01)\n",
     "\n",
     "# Setup the sensor suite\n",
     "def f(x): return 0\n",
-    "sensor = PointSensor(0, f, 0, np.array([[-5000], [5000]]), 2)\n",
+    "sensor = PointSensor(0, f, 0, np.array([[-5000], [5000]]), 1)\n",
     "sensors = np.array([sensor]*5)\n",
     "sensor_suite = SensorSuite(\n",
     "    ScalarField(RBFModel, field_bounds), \n",
     "    sensors,\n",
-    "    symmetry=[symmetry_manager.reflect_2D_horiz]\n",
+    "    symmetry=[symmetry_manager.reflect_1D]\n",
     ")"
    ]
   },
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "decription"
+    "description"
    ]
   },
   {
@@ -124,15 +124,10 @@
     "    res.history\n",
     ")\n",
     "graph_manager.draw()\n",
-    "graph_manager.build_2D_compare(\n",
+    "graph_manager.build_1D_compare(\n",
     "    grid,\n",
     "    proposed_layout,\n",
-    "    true_temps,\n",
-    "    model_temps\n",
-    ")\n",
-    "graph_manager.draw()\n",
-    "graph_manager.build_3D_compare(\n",
-    "    grid,\n",
+    "    sensor_values,\n",
     "    true_temps,\n",
     "    model_temps\n",
     ")\n",
