--- a/manual/2.4 SOO 1D vectors.ipynb
+++ b/manual/2.4 SOO 1D vectors.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2.1 SOO for 2D scalar field"
+    "# 2.2 SOO for 1D scalars"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Description"
+    "description"
    ]
   },
   {
@@ -48,6 +48,29 @@
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
     "sensor_bounds = field_bounds+np.array([[1, 1], [-1, -1]])*0.002"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup the sensor suite\n",
+    "def f(x): return 0\n",
+    "sensor = PointSensor(0, f, 0, np.array([[-5000], [5000]]), 2)\n",
+    "sensors = np.array([sensor]*5)\n",
+    "sensor_suite = SensorSuite(\n",
+    "    ScalarField(RBFModel, field_bounds), \n",
+    "    sensors\n",
+    ")"
    ]
   },
   {
@@ -103,14 +126,14 @@
     "    sensor_bounds\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X)"
+    "proposed_layout, true_temps, model_temps = experiment.get_SOO_plotting_arrays(res.X)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "decription"
+    "description"
    ]
   },
   {
