--- a/manual/2.3 SOO 2D vectors.ipynb
+++ b/manual/2.3 SOO 2D vectors.ipynb
@@ -63,6 +63,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Setup the sensor suite\n",
+    "def f(x): return 0\n",
+    "sensor = PointSensor(0, f, 0, np.array([[-5000], [5000]]), 2)\n",
+    "sensors = np.array([sensor]*5)\n",
+    "sensor_suite = SensorSuite(\n",
+    "    ScalarField(RBFModel, field_bounds), \n",
+    "    sensors\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Setup the symmetry\n",
     "symmetry_manager = SymmetryManager()\n",
     "symmetry_manager.set_2D_x(np.mean(field_bounds[:, 0]))\n",
@@ -103,7 +126,7 @@
     "    sensor_bounds\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X)"
+    "proposed_layout, true_temps, model_temps = experiment.get_SOO_plotting_arrays(res.X)"
    ]
   },
   {
