Vector fields and sensors sorted!

--- a/manual/2.3 SOO 2D vectors.ipynb
+++ b/manual/2.3 SOO 2D vectors.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2.1 SOO for 2D scalar field"
+    "# 2.3 SOO for 2D vector field"
    ]
   },
   {
@@ -43,34 +43,11 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = GraphManager()\n",
-    "true_temp_field = pickle_manager.read_file('simulation', 'temp_plane_field.obj')\n",
-    "grid = pickle_manager.read_file('simulation', 'temp_plane_points.obj')\n",
+    "true_temp_field = pickle_manager.read_file('simulation', 'disp_plane_field.obj')\n",
+    "grid = pickle_manager.read_file('simulation', 'disp_plane_points.obj')\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
     "sensor_bounds = field_bounds+np.array([[1, 1], [-1, -1]])*0.002"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "description"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Setup the sensor suite\n",
-    "def f(x): return 0\n",
-    "sensor = PointSensor(0, f, 0, np.array([[-5000], [5000]]), 2)\n",
-    "sensors = np.array([sensor]*5)\n",
-    "sensor_suite = SensorSuite(\n",
-    "    ScalarField(RBFModel, field_bounds), \n",
-    "    sensors\n",
-    ")"
    ]
   },
   {
@@ -91,11 +68,16 @@
     "symmetry_manager.set_2D_x(np.mean(field_bounds[:, 0]))\n",
     "\n",
     "# Setup the sensor suite\n",
-    "def f(x): return 0\n",
-    "sensor = PointSensor(0, f, 0, np.array([[-5000], [5000]]), 2)\n",
+    "def f(x): return np.zeros(x.shape)\n",
+    "sensor = PointSensor(0, f, 0, np.array([[-5e10, -5e10, -5e10], [5e10, 5e10, 5e10]]), 2)\n",
     "sensors = np.array([sensor]*5)\n",
+    "\n",
+    "# def f(x): return np.zeros(x.shape)\n",
+    "# sensor = MultiSensor(0, f, 0.1, np.array([[-5e10, -5e10, -5e10], [5e10, 5e10, 5e10]]), np.linspace(sensor_bounds[0, 0], sensor_bounds[1, 0], 10).reshape(-1, 2))\n",
+    "# sensors = np.array([sensor])\n",
+    "\n",
     "sensor_suite = SensorSuite(\n",
-    "    ScalarField(RBFModel, field_bounds), \n",
+    "    VectorField(RBFModel, field_bounds), \n",
     "    sensors,\n",
     "    symmetry=[symmetry_manager.reflect_2D_horiz]\n",
     ")"
@@ -126,7 +108,7 @@
     "    sensor_bounds\n",
     ")\n",
     "res = experiment.design()\n",
-    "proposed_layout, true_temps, model_temps = experiment.get_SOO_plotting_arrays(res.X)"
+    "proposed_layout, true_disps, model_disps, sensor_vals = experiment.get_SOO_plotting_arrays(res.X)"
    ]
   },
   {
@@ -142,6 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mag_true_disps = np.linalg.norm(true_disps, axis=1).reshape(-1, 1)\n",
+    "mag_model_disps = np.linalg.norm(model_disps, axis=1).reshape(-1, 1)\n",
+    "mag_sensor_vals = np.linalg.norm(sensor_vals, axis=1).reshape(-1, 1)\n",
+    "\n",
     "# Display the results\n",
     "graph_manager.build_optimisation(\n",
     "    res.history\n",
@@ -150,14 +136,14 @@
     "graph_manager.build_2D_compare(\n",
     "    grid,\n",
     "    proposed_layout,\n",
-    "    true_temps,\n",
-    "    model_temps\n",
+    "    mag_true_disps,\n",
+    "    mag_model_disps\n",
     ")\n",
     "graph_manager.draw()\n",
     "graph_manager.build_3D_compare(\n",
     "    grid,\n",
-    "    true_temps,\n",
-    "    model_temps\n",
+    "    mag_true_disps,\n",
+    "    mag_model_disps\n",
     ")\n",
     "graph_manager.draw()"
    ]
