--- a/manual/3.2 MOO 1D vectors.ipynb
+++ b/manual/3.2 MOO 1D vectors.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.2 MOO for 1D scalar fields"
+    "# 3.3 MOO for 2D vector fields"
    ]
   },
   {
@@ -43,8 +43,8 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = GraphManager()\n",
-    "true_temp_field = pickle_manager.read_file('simulation', 'temp_line_field.obj')\n",
-    "grid = pickle_manager.read_file('simulation', 'temp_line_points.obj')\n",
+    "true_temp_field = pickle_manager.read_file('simulation', 'disp_plane_field.obj')\n",
+    "grid = pickle_manager.read_file('simulation', 'disp_plane_points.obj')\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
     "sensor_bounds = field_bounds+np.array([[1], [-1]])*0.002"
