--- a/manual/3.1 MOO 2D scalars.ipynb
+++ b/manual/3.1 MOO 2D scalars.ipynb
@@ -69,12 +69,9 @@
     "\n",
     "# Setup the sensor suite\n",
     "def f(x): return np.zeros(x.shape)\n",
-    "sensor = RoundSensor(0, f, 0.1, np.array([[-5000], [5000]]), 0, 2)\n",
-    "sensors = np.array([sensor]*5)\n",
-    "\n",
-    "# def f(x): return np.zeros(x.shape)\n",
-    "# sensor = MultiSensor(0, f, 0.1, np.array([[-5000], [5000]]), np.linspace(sensor_bounds[0, 0], sensor_bounds[1, 0], 10).reshape(-1, 2))\n",
-    "# sensors = np.array([sensor])\n",
+    "sensor_1 = RoundSensor(0, f, 0.1, np.array([[-5000], [5000]]), 0, 2)\n",
+    "sensor_2 = MultiSensor(0, f, 0.2, np.array([[-5000], [5000]]), np.linspace(sensor_bounds[0, 0], sensor_bounds[1, 0], 10).reshape(-1, 2))\n",
+    "sensors = np.array([sensor_1, sensor_1, sensor_1, sensor_1, sensor_2])\n",
     "\n",
     "sensor_suite = SensorSuite(\n",
     "    ScalarField(RBFModel, field_bounds), \n",
