--- a/manual/3.4 MOO 1D vectors.ipynb
+++ b/manual/3.4 MOO 1D vectors.ipynb
@@ -43,8 +43,8 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = GraphManager()\n",
-    "true_temp_field = pickle_manager.read_file('simulation', 'disp_plane_field.obj')\n",
-    "grid = pickle_manager.read_file('simulation', 'disp_plane_points.obj')\n",
+    "true_temp_field = pickle_manager.read_file('simulation', 'disp_line_field.obj')\n",
+    "grid = pickle_manager.read_file('simulation', 'disp_line_points.obj')\n",
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
     "sensor_bounds = field_bounds+np.array([[1], [-1]])*0.002"
@@ -64,13 +64,12 @@
    "outputs": [],
    "source": [
     "# Setup the sensor suite\n",
-    "temps = pickle_manager.read_file('sensors', 'k-type-T.obj')\n",
-    "voltages = pickle_manager.read_file('sensors', 'k-type-V.obj')\n",
-    "sensor = Thermocouple(temps, voltages, 1)\n",
+    "def f(x): return np.zeros(x.shape)\n",
+    "sensor = RoundSensor(0, f, 0.1, np.array([[-5e10, -5e10, -5e10], [5e10, 5e10, 5e10]]), 0.001, 1)\n",
     "sensors = np.array([sensor]*5)\n",
     "\n",
     "sensor_suite = SensorSuite(\n",
-    "    ScalarField(RBFModel, field_bounds), \n",
+    "    VectorField(RBFModel, field_bounds), \n",
     "    sensors\n",
     ")"
    ]
@@ -129,13 +128,17 @@
     "\n",
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
-    "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X[i])\n",
+    "    proposed_layout, true_disps, model_disps, sensor_vals = experiment.get_SOO_plotting_arrays(res.X[i])\n",
+    "    mag_true_disps = np.linalg.norm(true_disps, axis=1).reshape(-1, 1)\n",
+    "    mag_model_disps = np.linalg.norm(model_disps, axis=1).reshape(-1, 1)\n",
+    "    mag_sensor_vals = np.linalg.norm(sensor_vals, axis=1).reshape(-1, 1)\n",
+    "    \n",
     "    graph_manager.build_1D_compare(\n",
     "        grid,\n",
     "        proposed_layout,\n",
-    "        sensor_values,\n",
-    "        true_temps,\n",
-    "        model_temps\n",
+    "        mag_sensor_vals,\n",
+    "        mag_true_disps,\n",
+    "        mag_model_disps\n",
     "    )\n",
     "    graph_manager.draw()\n",
     "    display_str = input('Enter setup to display [Q to quit]: ')"
