--- a/manual/assumptions.ipynb
+++ b/manual/assumptions.ipynb
@@ -7,22 +7,19 @@
     "# Assumptions\n",
     "\n",
     "Reading the FEM file:\n",
-    "* The temperature can be linearly interpolated between the nodes in the FEM mesh\n",
+    "* The error from interpolating between the FEM nodes with a function other than the FEM shape function is negligible.\n",
     "\n",
     "\n",
     "Optimisation:\n",
-    "* The FEM temperature field and ML temperature field can be compared well by calculating the MSE between them at many points\n",
-    "* We use the Uniform Manager or Symmetric Manager to force symmetry or uniformity in the x-direction\n",
-    "* The heuristic NSGA-II method will produce Pareto-optimal results after a long enough time\n",
-    "* The chance of 4 or more sensors failing is so low that these cases have a negligible effect on the expected field reconstruction accuracy\n",
-    "* When 4 or more sensors fail none of these cases count towards the chance of a successful experiment\n",
+    "* The FEM temperature field and ML temperature field can be compared well by calculating the MSE between them at many points.\n",
+    "* The heuristic NSGA-II method will produce Pareto-optimal results after a long enough time.\n",
+    "* When so many sensors fail that there are not enough working sensors to use the ML algorithm we count the loss as being no bigger than the greatest loss calculated up to that point.\n",
     "\n",
     "\n",
     "Thermocouples:\n",
-    "* The thermocouples measure the average temperature in a specific circular region\n",
-    "* This average temperature can be calculated by a Monte Carlo method\n",
-    "* The thermocouples have a normally distributed random error with a standard deviation equal to 1/3 of 2.2 degrees\n",
-    "* The thermocouples' voltage is converted to temperature using a linear fit (introducing systematic errors)\n",
+    "* The thermocouples measure the average temperature in a specific circular region.\n",
+    "* The thermocouples have a normally distributed random error with a standard deviation equal to 1/3 of 2.2 degrees.\n",
+    "* The thermocouples' voltage is converted to temperature using a linear fit (introducing systematic errors).\n",
     "\n"
    ]
   }
