--- a/manual/0 overview.ipynb
+++ b/manual/0 overview.ipynb
@@ -13,15 +13,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DO NOT\n",
-    "\n",
-    "* DO NOT delete `monoblock_out.e` as it is used for testing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Function naming\n",
     "\n",
     "* `get_` means getter\n",
@@ -70,15 +61,7 @@
     "* `predict_values` where an array of positions is input and the predictions for the field values at those points are output.\n",
     "The simulation file provided in step 1 is converted to a field object. This is referred to as the 'True field'. Field objects are also used by the `SensorSuite` to predict the field values from sensor values.\n",
     "\n",
-    "The `SensorSuite` objects contain an array of sensors. These sensors can be assigned true values (depending on how many measurements a sensor takes) and will give noisy readings. The `SensorSuite` has 3 key functions carried out by a variety of methods.\n",
-    "* `__init__` where a sensor suite is initialised by feeding in an array of the sensors to be used in an experiment, and the kind of field that will be predicted in that experiment. An experiment only measures one kind of field so you will need many experiment objects if in real life you will be measuring displacements as well as temperatures. It is important to input any assumptions you make about the symmetry of the experiment (see manual 2).\n",
-    "* The SensorSuite builds up a model of the field based on true values input. First we consider which sensors are active (some may be broken). Next we `get_predict_pos` to find out which positions the sensors will need to record data at based off an array of the sensor positions. This is because an IR camera at one position may record data at many positions. Next we `set_sensor_values` to the ground truth sensor values - if you are trying the optimise the experiment design this will be from the simulation 'True field'. Finally we `fit_sensor_model`.\n",
-    "* We can `predict_data` to get the predicted values at various positions in the fields.\n",
-    "\n",
-    "The `Experiment` objects describe the experiments. They have 3 key functions carried out by a variety of methods.\n",
-    "* `__init__` where the optimiser is specified.\n",
-    "* Next the kind of optimisation is planned for with `plan_moo` or `plan_soo`. Ensure the optimiser is chosen to match the optimisation method.\n",
-    "* Finally the experiment can be designed with `design`\n",
+    "TODO\n",
     "\n",
     "After all this we analyse the results by plotting graphs with the graph manager."
    ]
